# email-mcp

./: CLAUDE.md  LICENSE  README.md  contract_index.py  email_protocol_contract.py  pyproject.toml  requirement-manifest.md
.serena/: project.yml
.serena/memories/: FACT-ANTI-PATTERN-22229e6.md  FACT-ANTI-PATTERN-a9384a7.md  FACT-ANTI-PATTERN-e15989c.md  FACT-ERROR-35899d4.md  FACT-ERROR-90e1029.md  FACT-IDENTITY-fc759cf.md  FACT-WORKFLOW-0bd40c6.md  FACT-WORKFLOW-45bfe92.md  FACT-WORKFLOW-47e10ea.md  FACT-WORKFLOW-644d081.md  FACT-WORKFLOW-8fb7336.md  FACT-WORKFLOW-fb9ab41.md  auto-compact-context-save-2026-01-13-22-31-13.md  auto-compact-context-save-2026-01-13-22-47-12.md  auto-compact-context-save-2026-01-13-23-11-15.md
contracts/: __init__.py  email_protocol_contract.py  imap_client_contract.py
src/email_mcp/: __init__.py  __main__.py  credentials.py  imap_client.py  server.py
tests/: test_email_protocol_contract.py  test_server_implementation.py
